# ds-mlops-week-full-recap

./: .env.sample  .env.sample.yaml  .gitignore  Dockerfile.sample  Makefile  README.md  pyproject.toml
models/: readme.txt
notebook/: notebook.ipynb
solution/fastapi/: fastapi.py
solution/fastapi/script/: load_model.py
solution/ml/: main.py
solution/ml/tools/: model.py  preprocess.py
